# torchy

./: README.md  __init__.py  _tensor.py  creation.py  pyproject.toml  setup.py  test.ipynb
_numpy/: _binary_ufuncs_impl.py  _reductions_impl.py
autograd/: function.py  functional.py
nn/: __init__.py  activations.py  data.py  functional.py  init.py  layers.py  losses.py  main.ipynb  main_torch.ipynb  networks.py  optimizers.py  parameter.py  schedulers.py  torchy.py  utils.py  weights.py
nn/modules/: linear.py  module.py
torchy/: __init__.py  _tensor.py
torchy.egg-info/: PKG-INFO  SOURCES.txt
torchy/_engine_wrapper/: __init__.py  _binary_ufuncs.py  _funcs.py  _unary_ufuncs.py  _utils.py
torchy/_numpy/: __init__.py  _binary_ufuncs.py  _binary_ufuncs_impl.py  _funcs.py  _funcs_impl.py  _unary_ufuncs.py  _unary_ufuncs_impl.py
torchy/autograd/: __init__.py  function.py
torchy/nn/: __init__.py  _functional_impl.py  functional.py  init.py  parameter.py
torchy/nn/modules/: __init__.py  activations.py  linear.py  loss.py  module.py
torchy/optim/: adam.py  optimizer.py  optimizers.py
torchy/utils/data/: dataloader.py  dataset.py
