[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchy"  # Replace with your project name
version = "0.1.0"
description = "Mini pytorch"
readme = "README.md"  # Optional, path to your README file
license = { file = "LICENSE" }  # Optional, path to your LICENSE file
authors = [
    { name = "Thien Le", email = "thienle1942@gmail.com" }
]
dependencies = []  # Add runtime dependencies here

[tool.setuptools.packages.find]
where = ["."]